Migrate ops from legacy to subdomain and ensure tests pass